Paginas para inserir

--- a/src/main/resources/templates/atendente-index.html
+++ b/src/main/resources/templates/atendente-index.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8">
-<title>Atendente</title>
-</head>
-<body>
-<h1>Atendente</h1>
-<ul>
-<li><a href="listar.html">Listar</a></li>
-<li><a href="nova.html">Criar</a></li>
-</ul>
-</body>
-</html>
+<div th:replace="fragments/cabecalho :: cabecalho"></div>
+<h4>Atendente</h4>
+
+
+</form>
+<div th:replace="fragments/rodape :: rodape"></div>
