--- a/src/main/resources/templates/fragments/cabecalho.html
+++ b/src/main/resources/templates/fragments/cabecalho.html
@@ -24,19 +24,9 @@
             </li>        <li class="nav-item">
                 <a class="nav-link" th:href="@{/categoria/}">Categoria</a>
             </li>
-            <li th:if="${login} != 0" class="nav-item">
-                <a class="nav-link" th:href="@{/areas/minhas-areas}">Minhas Areas</a>
-            </li>
-            <!-- <li th:if="${login} != 0" class="nav-item">
-                <a class="nav-link" th:href="@{/revisao/por-avaliador/{id}(id = ${login})}">Revisões por Avaliador</a>
-            </li>
-            <li th:if="${login} == 0" class="nav-item mr-sm-2">
-                <a class="nav-link" th:href="@{/login/}">Logar</a>
-            </li>
-
             <li th:if="${login} != 0" class="nav-item mr-sm-2">
-                <a class="nav-link" th:href="@{/login/sair}">Sair</a> -->
-            <!-- </li> -->
+                <a class="nav-link" th:href="@{/login/}">Sair</a> 
+            </li>
         </ul>
     </div>
 </nav>
