--- a/src/main/resources/templates/atendente-index.html
+++ b/src/main/resources/templates/atendente-index.html
@@ -1,6 +1,7 @@
 <div th:replace="fragments/cabecalho :: cabecalho"></div>
-<h4>Atendente</h4>
-
-
-</form>
+<h5>Atendente</h5>
+<div class="list-group">
+    <a href="/atendente/listar.html" 
+    class="list-group-item list-group-item-action">Lista de Atendentes</a>
+</div>
 <div th:replace="fragments/rodape :: rodape"></div>
