--- a/src/main/resources/templates/usuario-form-edit.html
+++ b/src/main/resources/templates/usuario-form-edit.html
@@ -2,7 +2,7 @@
 <h4>Crie Usuário</h4>
 
 <form th:action="@{/usuario/editar{id}(id=*{id})}" th:object="${usuario}" method="POST">   
-     <div class=" row form-group">
+    <div class=" row form-group">
         <div class="col-md-6">
             <label>Nome Completo</label>
                 <input type="text" name="nomeCompleto" class="form-control" th:field="*{nomeCompleto}" />
@@ -18,12 +18,12 @@
     </div>
     <div class=" row form-group">
             <div class="col-md-6">
-                    <label>Telefone Fixo</label>
+                    <label>Codigo Vínculo</label>
                     <input type="text" name="codigoVinculo" class="form-control" th:field="*{codigoVinculo}"/>
                     <strong th:if="${#fields.hasErrors('codigoVinculo')}" th:errors="*{codigoVinculo}"></strong>
             </div>
     </div>
-
+    
     <div class=" row form-group">
      <div class="col-md-6">
             <label>Telefone Celular</label>
@@ -31,7 +31,15 @@
              <strong th:if="${#fields.hasErrors('celular')}" th:errors="*{celular}"></strong>
     </div>
         </div>
-
+    
+        <div class=" row form-group">
+            <div class="col-md-6">
+                   <label>Telefone</label>
+                    <input type="text" name="telefone" class="form-control" th:field="*{telefone}"/>
+                    <strong th:if="${#fields.hasErrors('telefone')}" th:errors="*{telefone}"></strong>
+           </div>
+               </div>
+    
     <div class=" row form-group">
         <div class="col-md-6">
             <label>E-mail</label>
@@ -42,9 +50,7 @@
     
     <button type="submit" class="btn btn-info">Salvar</button>
     <button type="reset" class="btn btn-secondary">Limpar</button>
-    <a th:href="@{/atendente/listar.html}" class="btn btn-dark">Cancelar</a> 
-</form>
-
-
-
-<div th:replace="fragments/rodape :: rodape"></div>
+    <a th:href="@{/usuario/listar.html}" class="btn btn-dark">Cancelar</a> 
+    </form>
+    
+    <div th:replace="fragments/rodape :: rodape"></div>
