--- a/src/main/resources/templates/usuario-index.html
+++ b/src/main/resources/templates/usuario-index.html
@@ -1,7 +1,7 @@
 <div th:replace="fragments/cabecalho :: cabecalho"></div>
 <h5>Usuario</h5>
 <div class="list-group">
-    <a href="/atendente/listar.html" 
+    <a href="/usuario/listar.html" 
     class="list-group-item list-group-item-action">Lista de Usuários</a>
     <a href="/usuario/nova.html" 
     class="list-group-item list-group-item-action">Criar Usuário</a>
