--- a/src/main/resources/templates/categoria-form-edit.html
+++ b/src/main/resources/templates/categoria-form-edit.html
@@ -1,24 +1,26 @@
 <div th:replace="fragments/cabecalho :: cabecalho"></div>
-<h4>Crie Usuário</h4>
-
+<h4>Editar Usuário</h4>
 <form th:action="@{/categoria/editar{id}(id=*{id})}" th:object="${categoria}" method="POST">   
     <div class=" row form-group">
         <div class="col-md-6">
-            <label>Nome Completo</label>
+            <label>Título</label>
                 <input type="text" name="titulo" class="form-control" th:field="*{titulo}" />
             <strong th:if="${#fields.hasErrors('titulo')}" th:errors="*{titulo}"></strong>
         </div> 
-    </div>
+    </div> 
     <div class=" row form-group">
-        <div class="form-group">
-            <label for="exampleFormControlTextarea1" >Descrição Textual</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" th:field="*{descricaoTextual}"></textarea>
-          </div>
+            <div class="col-md-6">
+                <label>Descrição Textual</label>
+                <input type="text" name="descricaoTextual" class="form-control" th:field="*{descricaoTextual}"/>
+                <strong th:if="${#fields.hasErrors('descricaoTextual')}" th:errors="*{descricaoTextual}"></strong>
+            </div>
     </div>
-    
+
     <button type="submit" class="btn btn-info">Salvar</button>
     <button type="reset" class="btn btn-secondary">Limpar</button>
-    <a th:href="@{/atendente/listar.html}" class="btn btn-dark">Cancelar</a> 
-    </form>
-    
-    <div th:replace="fragments/rodape :: rodape"></div>
+    <a th:href="@{/categoria/listar.html}" class="btn btn-dark">Cancelar</a> 
+</form>
+
+
+
+<div th:replace="fragments/rodape :: rodape"></div>
