Login e logout no sistema por meio de session

--- a/src/main/resources/templates/fragments/cabecalho.html
+++ b/src/main/resources/templates/fragments/cabecalho.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" th:href="@{/categoria/}">Categoria</a>
             </li>
             <li th:if="${login} != 0" class="nav-item mr-sm-2">
-                <a class="nav-link" th:href="@{/login/}">Sair</a> 
+                <a class="nav-link" th:href="@{/logout.html}">Sair</a> 
             </li>
         </ul>
     </div>
