--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <div th:replace="fragments/cabecalhologin :: cabecalhologin"></div>
 <div class="container">
-    <form class="form-signin" th:action="@{/home}" method="post">
+    <form class="form-signin" th:action="@{/login.html}" method="post">
         <h4 class="form-signin-heading">Por favor, faça seu Login.</h4>
         <input type="text" class="form-control" placeholder="Endereço de Email" 
         id="email" name="email" />
