botão para criar usuario e categoria

--- a/src/main/resources/templates/lista-categoria.html
+++ b/src/main/resources/templates/lista-categoria.html
@@ -28,6 +28,8 @@
         <div>
     </div>
     </div>
+    <a th:href="@{/categoria/nova.html}" class="btn btn-dark">Criar Categoria</a> 
+
 </div>
 
 <div th:replace="fragments/rodape :: rodape"></div>
