--- a/src/main/resources/templates/lista-usuario.html
+++ b/src/main/resources/templates/lista-usuario.html
@@ -37,6 +37,7 @@
         <div>
     </div>
     </div>
+    <a th:href="@{/usuario/nova.html}" class="btn btn-dark">Criar Usuário</a> 
 </div>
 
 <div th:replace="fragments/rodape :: rodape"></div>
