link para atendimento

--- a/src/main/resources/templates/atendimento-index.html
+++ b/src/main/resources/templates/atendimento-index.html
@@ -8,4 +8,24 @@
     <a href="/atendimento/planejar.html" 
     class="list-group-item list-group-item-action">Detalhe Atendimento</a>
 </div>
+<div class="list-group">
+    <a href="/atendimento/editar.html" 
+    class="list-group-item list-group-item-action">Editar Atendimento</a>
+</div>
+<div class="list-group">
+    <a href="/atendimento/atendimentonaofechado.html" 
+    class="list-group-item list-group-item-action">Atendimentos Não Fechados</a>
+</div>
+<div class="list-group">
+    <a href="/atendimento/nao-fechado.html" 
+    class="list-group-item list-group-item-action">Atendimentos Não Fechados</a>
+</div>
+<div class="list-group">
+    <a href="/atendimento/total-nao-fechado.html" 
+    class="list-group-item list-group-item-action">Total de Atendimentos Não Fechados por Atendente</a>
+</div>
+<div class="list-group">
+    <a href="/atendimento/atendimento-usuario.html" 
+    class="list-group-item list-group-item-action">Total de Atendimentos por Usuário</a>
+</div>
 <div th:replace="fragments/rodape :: rodape"></div>
