Refatoração de Tela HTML

--- a/src/main/resources/templates/lista-atendente.html
+++ b/src/main/resources/templates/lista-atendente.html
@@ -29,6 +29,8 @@
                         <button>Editar</button></a></td>
                     <td><a th:href="@{/atendente/excluir.html(id=${atendente.id})}">
                         <button>Excluir</button></a></td>
+                 <td><a th:href="@{/atendente/total-atendimento.html(id=${atendente.id})}">
+                            <button>Total de Atendimentos</button></a></td>
                 </tr>
             </tbody>
         </table>
