--- a/src/main/resources/templates/lista-categoria.html
+++ b/src/main/resources/templates/lista-categoria.html
@@ -22,6 +22,8 @@
                         <button>Editar</button></a></td>
                     <td><a th:href="@{/categoria/excluir.html(id=${categoria.id})}">
                         <button>Excluir</button></a></td>
+                        <td><a th:href="@{/categoria/listar-atendimento.html(id=${categoria.id})}">
+                            <button>Lista de Atendimentos</button></a></td>
                 </tr>
             </tbody>
         </table>
