--- a/src/main/resources/templates/lista-usuario.html
+++ b/src/main/resources/templates/lista-usuario.html
@@ -31,6 +31,8 @@
                         <button>Editar</button></a></td>
                     <td><a th:href="@{/usuario/excluir.html(id=${usuario.id})}">
                         <button>Excluir</button></a></td>
+                     <td><a th:href="@{/usuario/total-atendimento.html(id=${usuario.id})}">
+                        <button>Total de Atendimentos</button></a></td>
                 </tr>
             </tbody>
         </table>
