Refatoração Página html pagina inicial e cabeçalho

--- a/src/main/resources/templates/pagina-inicial.html
+++ b/src/main/resources/templates/pagina-inicial.html
@@ -1,5 +1,5 @@
 <div th:replace="fragments/cabecalho :: cabecalho"></div>
 <div th:object="${atendente}">
-    <h2>Olá Bem <span th:text="*{nomeCompleto}"></span> Vindo ao Sistema!</h2>
+    <h2>Olá <span th:text="*{nomeCompleto}"></span>, Bem Vindo ao Sistema!</h2>
 </div>
 <div th:replace="fragments/rodape :: rodape"></div>
