Correção de bugs ao atualizar atendimento

--- a/src/main/resources/templates/atendimento-editar.html
+++ b/src/main/resources/templates/atendimento-editar.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-md-6">
                         <label>Acrescentar Descrição Textual</label>
-                        <input type="text" name="descricaoTextual" class="form-control"
+                        <input type="text" name="novaDescricaoTextual" class="form-control"
                                 th:field="${novaDescricaoTextual}" th:text="${novaDescricaoTextual}"/>
                 </div> 
                 <div class="col-md-8">
