Refatoração de nome

--- a/src/main/resources/templates/atendimento-editar.html
+++ b/src/main/resources/templates/atendimento-editar.html
@@ -59,7 +59,7 @@
                         <input type="text" name="novaDescricaoTextual" class="form-control"/>
                 </div> 
                 <div class="col-md-8">
-                        <label>Usuário: <select class="form-control" th:field="*{status}">
+                        <label>Status: <select class="form-control" th:field="*{status}">
                                 <option th:field="*{status}"
                                 th:value="Aberto">Aberto</option>
                                 <option th:field="*{status}"
