--- a/src/main/resources/templates/atendimento-index.html
+++ b/src/main/resources/templates/atendimento-index.html
@@ -2,11 +2,11 @@
 <h5>Atendimento</h5>
 <div class="list-group">
     <a href="/atendimento/admin.html" 
-    class="list-group-item list-group-item-action">Gestão Atendimento</a>
+    class="list-group-item list-group-item-action">Criar Atendimento</a>
 </div>
 <div class="list-group">
     <a href="/atendimento/listar.html" 
-    class="list-group-item list-group-item-action">Detalhe Atendimento</a>
+    class="list-group-item list-group-item-action">Lista e Detalhes dos Atendimentos</a>
 </div>
 
 <div th:replace="fragments/rodape :: rodape"></div>
