--- a/src/main/resources/templates/atendimento-listar.html
+++ b/src/main/resources/templates/atendimento-listar.html
@@ -41,7 +41,7 @@
         <div>
     </div>
     </div>
-    <a th:href="@{/atendimento/admin.html}" class="btn btn-dark">Criar Categoria</a> 
+    <a th:href="@{/atendimento/admin.html}" class="btn btn-dark">Criar Atendimento</a> 
 </div>
 
 <div th:replace="fragments/rodape :: rodape"></div>
