Contando quantidade de atendimentos por atendente

--- a/src/main/resources/templates/atendimento-contagem-atendente.html
+++ b/src/main/resources/templates/atendimento-contagem-atendente.html
@@ -1,13 +1,10 @@
 <div th:replace="fragments/cabecalho :: cabecalho"></div>
-<form th:action="@{/atendimento/atendente-atendimento{id}(id=*{id})}" th:object="${atendimento}" method="POST">    <div class=" row form-group"></div>
-    <h1>Total de Atendimento não fechado por Atendente </h1>
+    <div class=" row form-group"></div>
+    <h1><th>Total de Atendimento não fechado por Atendente</th></h1>
     <tbody>
-        <tr th:each="atendente:${atendente}" th:object=${atendente}>
-            <td th:text=*{contagem}></td>
-        </tr>
+            <h1><td th:text=${contagem}></td></h1>
     </tbody>
     </table>
-    </form>
-    <a th:href="@{/usuario/listar.html}">
-        <button>Listar Usuários</button></a>
+    <a th:href="@{/atendente/listar.html}">
+        <button>Listar Atendentes</button></a>
 <div th:replace="fragments/rodape :: rodape"></div>
