refatoração corrigindo erro 404

--- a/src/main/resources/templates/atendimento-usuario.html
+++ b/src/main/resources/templates/atendimento-usuario.html
@@ -1,14 +1,10 @@
 <div th:replace="fragments/cabecalho :: cabecalho"></div>
-<form th:action="@{/atendimento/contar-atendimento-usuario{id}(id=*{id})}" th:object="${atendimento}" method="POST">    
-    <div class=" row form-group"></div>
-    <h1>Total de Atendimento por Usuário </h1>
+<div class=" row form-group"></div>
+    <h1><th>Total de Atendimento por Usuario</th></h1>
     <tbody>
-        <tr th:each="usuario:${usuario}" th:object=${usuario}>
-            <td th:text=*{contagem}></td>
-        </tr>
+            <h1><td th:text=${contagem}></td></h1>
     </tbody>
     </table>
-    </form>
     <a th:href="@{/usuario/listar.html}">
-        <button>Listar Usuários</button></a>
+        <button>Listar Usuarios</button></a>
 <div th:replace="fragments/rodape :: rodape"></div>
